--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* .Header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+} */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.myCart {
+  position: fixed;
+  top: 300px;
+  width: 80%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: right;
+  cursor: pointer;
+  font-size: 50px;
+}
+
+.size-span2 {
+  position: relative;
+  top: -30px;
+  border: 4px solid white;
+  right: 20px;
+  color: red;
+  background-color: white;
+  border-radius: 50%;
+  font-size: 40px;
+}
+
+.navbar-nav a {
+  font-size: 18px;
+}
+
+.number-cart {
+  padding: 0px 2px 0px 2px;
   color: white;
+  font-weight: bold;
+  border-radius: 7px;
+  position: relative;
+  right: 15px;
+  top: -10px;
+  background-color: red;
+  font-size: 13px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.themvaogio:hover {
+  background-color: red;
 }
